--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-12-01 21:48+0100\n"
+"POT-Creation-Date: 2012-12-01 16:48+0100\n"
 "PO-Revision-Date: 2012-11-25 16:48+0200\n"
 "Last-Translator: Tapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -160,6 +160,14 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
+#, fuzzy, python-format
+msgid "%d channel found"
+msgid_plural "%d channels found"
+msgstr[0] "%d kanāli atrasti!"
+msgstr[1] "%d kanāli atrasti!"
+msgstr[2] "%d kanāli atrasti!"
 
 #, python-format
 msgid "%d file"
@@ -2881,6 +2889,10 @@ msgstr "Paziņojums..."
 msgid "Minimum age %d years"
 msgstr "Minimālais vecums %d gadi"
 
+#, fuzzy
+msgid "Minimum send interval"
+msgstr "Minimālais vecums %d gadi"
+
 msgid "Missing "
 msgstr "Trūkst"
 
@@ -4238,9 +4250,10 @@ msgstr "Meklē jūsu bezvadu pieejas punktus, un pieslēdz tiem lietojot jūsu i
 msgid "Scanning %s..."
 msgstr "Meklē %s..."
 
-#, python-format
-msgid "Scanning - %d%% completed, %d channel found"
-msgid_plural "Scanning - %d%% completed, %d channels found"
+#. TRANSLATORS: The stb is performing a channel scan, progress percentage is printed in '%d' (and '%%' will show a single '%' symbol)
+#, fuzzy, python-format
+msgid "Scanning - %d%% completed"
+msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Meklēšana - %d%% pabeigta, %d kanāli atrasti"
 msgstr[1] "Meklēšana - %d%% pabeigta, %d kanāls atrasts"
 msgstr[2] "Meklēšana - %d%% pabeigta, %d kanāli atrasti"
@@ -7351,9 +7364,6 @@ msgstr "pārslēgts"
 #~ msgstr ""
 #~ "\n"
 #~ "Sistēma pārstartēsies pēc atjaunošanas!"
-
-#~ msgid "%d services found!"
-#~ msgstr "%d kanāli atrasti!"
 
 #~ msgid "/usr/share/enigma2 directory"
 #~ msgstr "/usr/share/enigma2 katalogs"
