--- a/po/nl.po
+++ b/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-11-29 21:48+0100\n"
+"POT-Creation-Date: 2012-12-01 16:48+0100\n"
 "PO-Revision-Date: 2012-11-29 21:58+0100\n"
 "Last-Translator: \n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -162,6 +162,13 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
+
+#. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
+#, fuzzy, python-format
+msgid "%d channel found"
+msgid_plural "%d channels found"
+msgstr[0] "%d kanalen gevonden."
+msgstr[1] "%d kanalen gevonden."
 
 #, python-format
 msgid "%d file"
@@ -2891,6 +2898,10 @@ msgstr "Bericht..."
 msgid "Minimum age %d years"
 msgstr "Minimum leeftijd %d jaar"
 
+#, fuzzy
+msgid "Minimum send interval"
+msgstr "Minimum leeftijd %d jaar"
+
 msgid "Missing "
 msgstr "Ontbrekend"
 
@@ -4260,9 +4271,10 @@ msgstr "Scan in uw netwerk naar accesspoints en maak een verbinding met het door
 msgid "Scanning %s..."
 msgstr "Zoeken %s..."
 
-#, python-format
-msgid "Scanning - %d%% completed, %d channel found"
-msgid_plural "Scanning - %d%% completed, %d channels found"
+#. TRANSLATORS: The stb is performing a channel scan, progress percentage is printed in '%d' (and '%%' will show a single '%' symbol)
+#, fuzzy, python-format
+msgid "Scanning - %d%% completed"
+msgid_plural "Scanning - %d%% completed"
 msgstr[0] "Zoeken - %d%% voltooid, %d zender gevonden"
 msgstr[1] "Zoeken - %d%% voltooid, %d zenders gevonden"
 
@@ -7402,9 +7414,6 @@ msgstr "zapte"
 
 #~ msgid " wireless networks found!"
 #~ msgstr "draadloze netwerken gevonden!"
-
-#~ msgid "%d services found!"
-#~ msgstr "%d kanalen gevonden."
 
 #~ msgid "/usr/share/enigma2 directory"
 #~ msgstr "/usr/share/enigma2 map"
