--- a/po/cs.po
+++ b/po/cs.po
@@ -174,12 +174,12 @@ msgid "%a %e/%m  %-H:%M"
 msgstr ""
 
 #. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
-#, fuzzy, python-format
+#, python-format
 msgid "%d channel found"
 msgid_plural "%d channels found"
-msgstr[0] "Prohledávání dokončeno, byl nalezen %d program "
-msgstr[1] "Prohledávání dokončeno, byly nalezeny %d programy"
-msgstr[2] "Prohledávání dokončeno, bylo nalezeno %d programů "
+msgstr[0] "%d kanál nalezen"
+msgstr[1] "%d kanály nalezeny"
+msgstr[2] "%d kanálů nalezeno"
 
 #, python-format
 msgid "%d file"
@@ -3501,9 +3501,8 @@ msgstr "Zpráva..."
 msgid "Minimum age %d years"
 msgstr "minimální věk %d roků"
 
-#, fuzzy
 msgid "Minimum send interval"
-msgstr "minimální věk %d roků"
+msgstr "Minimální interval posílání"
 
 msgid "Missing "
 msgstr "Chybí"
@@ -5187,12 +5186,12 @@ msgid "Scanning %s..."
 msgstr "Prohledává %s..."
 
 #. TRANSLATORS: The stb is performing a channel scan, progress percentage is printed in '%d' (and '%%' will show a single '%' symbol)
-#, fuzzy, python-format
+#, python-format
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
-msgstr[0] "Prohledávání - %d%% dokončeno, nalezen %d program"
-msgstr[1] "Prohledávání - %d%% dokončeno, nalezeny %d programy"
-msgstr[2] "Prohledávání - %d%% dokončeno, nalezeno %d programů"
+msgstr[0] "Prohledávání - %d%% dokončeno"
+msgstr[1] "Prohledávání - %d%% dokončena"
+msgstr[2] "Prohledávání - %d%% dokončeno"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
