--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-01 16:48+0100\n"
-"PO-Revision-Date: 2012-11-29 21:58+0100\n"
+"PO-Revision-Date: 2012-12-01 21:02+0100\n"
 "Last-Translator: \n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
 "Language: Nederlands\n"
@@ -164,11 +164,11 @@ msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
 
 #. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
-#, fuzzy, python-format
+#, python-format
 msgid "%d channel found"
 msgid_plural "%d channels found"
-msgstr[0] "%d kanalen gevonden."
-msgstr[1] "%d kanalen gevonden."
+msgstr[0] "%d kanaal gevonden"
+msgstr[1] "%d kanalen gevonden"
 
 #, python-format
 msgid "%d file"
@@ -2898,9 +2898,8 @@ msgstr "Bericht..."
 msgid "Minimum age %d years"
 msgstr "Minimum leeftijd %d jaar"
 
-#, fuzzy
 msgid "Minimum send interval"
-msgstr "Minimum leeftijd %d jaar"
+msgstr "Minimum verzend interval"
 
 msgid "Missing "
 msgstr "Ontbrekend"
@@ -4272,11 +4271,11 @@ msgid "Scanning %s..."
 msgstr "Zoeken %s..."
 
 #. TRANSLATORS: The stb is performing a channel scan, progress percentage is printed in '%d' (and '%%' will show a single '%' symbol)
-#, fuzzy, python-format
+#, python-format
 msgid "Scanning - %d%% completed"
 msgid_plural "Scanning - %d%% completed"
-msgstr[0] "Zoeken - %d%% voltooid, %d zender gevonden"
-msgstr[1] "Zoeken - %d%% voltooid, %d zenders gevonden"
+msgstr[0] "Zoeken - %d%% voltooid"
+msgstr[1] "Zoeken - %d%% voltooid"
 
 #, python-format
 msgid "Scanning completed, %d channel found"
