[Translations] NL updated

--- a/po/nl.po
+++ b/po/nl.po
@@ -1,11 +1,10 @@
-# Nederlands translations for Enigma2.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-03 15:00+0000\n"
-"PO-Revision-Date: 2012-12-08 20:49+0100\n"
+"PO-Revision-Date: 2012-12-08 21:04+0100\n"
 "Last-Translator: Rob van der Does <robvddoes@gmail.com>\n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -832,8 +831,10 @@ msgstr "Weet u zeker dat u dit log wilt verwijderen:\n"
 
 msgid ""
 "Are you sure you want to delete this:\n"
-" "
-msgstr "Weet u zeker dat u dit log wilt verwijderen:\n"
+"\n"
+msgstr ""
+"Weet u zeker dat u dit log wilt verwijderen:\n"
+"\n"
 
 msgid "Are you sure you want to exit this wizard?"
 msgstr "Wilt u deze wizard afsluiten?"
